--- a/Automation-with-Ansible/install-jenkins.yaml
+++ b/Automation-with-Ansible/install-jenkins.yaml
@@ -18,9 +18,9 @@
       dest: /etc/yum.repos.d/jenkins.repo
 
   - name: import a key file from jenkins-ci
-    ansible.buildin.rpm_key:
-    state: present
-    key: https://pkg.jenkins.io/redhat-stable/jenkins.io.key
+    ansible.builtin.rpm_key:
+      state: present
+      key: https://pkg.jenkins.io/redhat-stable/jenkins.io.key
 
   - name: yum update
     yum:
@@ -30,13 +30,13 @@
   - name: install java
     shell: amazon-linux-extras install java-openjdk11 -y
 
-  -name: install jenkins
+  - name: install jenkins
     yum:
       name: jenkins
       state: latest
   
   - name: start jenkins
-    ansible.buildin.systemd:
+    ansible.builtin.systemd:
       enabled: yes
       name: jenkins
       state: started
